--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "interview-backend",
   "version": "1.0.0",
-  "description": "",
+  "type": "module",
+  "description": "evaluaitor",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
